@@ -73,6 +73,7 @@ Template for new versions:
 - ``dfhack.gui.getSelectedJob``: can now return the job with a destination under the keyboard cursor (e.g. digging/carving/engraving jobs)
 - ``widgets.makeButtonLabelText``: create text and graphical buttons from character/color/tile maps and/or dynamically loaded tilesets
 - ``widgets.DimensionsTooltip``: reusable selected dimensions tooltip that follows the mouse cursor around
+- ``widgets.ButtonGroup``: subclass of CycleHotkeyLabel that additionally displays clickable graphical buttons
 
 ## Removed
 
